--- a/app/analysis/templates/dashboard.j2
+++ b/app/analysis/templates/dashboard.j2
@@ -1,5 +1,14 @@
-{% extends "main/layout.j2" %}
-
+{% extends "d3base.j2" %}
 {% block body %}
 <div class="display-4">Analysis Dashboard</div>
+<div class="row bg-secondary">
+    <div class="col-12 col-lg-6 bg-light" id="divstackbars"></div>
+    <div class="col-12 col-lg-6 bg-light" id="sunburst"></div>
+</div>
+<script src="{{ url_for('anal.static', filename='js/sunburst.js', stamp=timestamp) }}"></script>
+<script src="{{ url_for('anal.static', filename='js/divstackbars.js', stamp=timestamp) }}"></script>
+<script>
+d3.json("{{ url_for('anal_api.sunburst') }}").then((data) => sunburst(data, '#sunburst'));
+d3.json("{{ url_for('anal_api.divstackbars') }}").then((data) => divstackbars(data, '#divstackbars'));
+</script>
 {% endblock %}
