--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -14,15 +14,11 @@ table.clickable-table > tbody > tr:hover {
     font-size: 1rem;
 }
 
-table.dataTable thead .sorting:after,
-table.dataTable thead .sorting:before,
-table.dataTable thead .sorting_asc:after,
-table.dataTable thead .sorting_asc:before,
-table.dataTable thead .sorting_asc_disabled:after,
-table.dataTable thead .sorting_asc_disabled:before,
-table.dataTable thead .sorting_desc:after,
-table.dataTable thead .sorting_desc:before,
-table.dataTable thead .sorting_desc_disabled:after,
-table.dataTable thead .sorting_desc_disabled:before {
-bottom: .5em;
+.tightrow {
+    padding-left: -2px;
+    padding-right: -2px;
+}
+.tightcol {
+    padding-left: 2px;
+    padding-right: 2px;
 }
