--- a/app/templates/main/home.j2
+++ b/app/templates/main/home.j2
@@ -1,4 +1,4 @@
-{% extends "main/layout.j2" %}
+{% extends "layout.j2" %}
 {% import "main/trans_modal.j2" as trans_modal %}
 {% import "main/transfer_modal.j2" as transfer %}
 
