--- a/finnance/main/templates/account.j2
+++ b/finnance/main/templates/account.j2
@@ -1,28 +1,24 @@
 {% extends "layout.j2" %}
 {% import "trans_modal.j2" as trans_modal %}
-{% import "changes.j2" as change_macros %}
+{% import "tables.j2" as tables %}
 
 {% block body %}
 <h1 class="display-4">{{ account.desc }}</h1>
 
-<h2>{{ account.currency.code }} {{ saldo }}</h2>
+<h2>{{ account.currency.code }} {{ account.currency.format(saldos[0]) }}</h2>
 <p class="lead">Started at: {{ account.date_created.strftime('%x') }} with {{ account.currency.code}} {{ account.starting() }}</p>
 
 <button type="button" class="btn btn-primary btn-lg mb-2 toggler" data-info="new{{ account.id }}"
     data-toggle="modal" data-target="#transModal">
     New Transaction
 </button>
-<!-- Modal -->
-<!-- defined in included trans_modals.j2 -->
-{{ trans_modal.modal(accounts, agents, categories, currencies) }}
 
+<div class="table-responsive">
 <table class="table table-hover">
-    <caption><a href="{{ url_for('main.account_transactions', account_id=account.id) }}">More...</a></caption>
-    {{ change_macros.head() }}
-    <tbody>
-        {{ change_macros.rows(last_5, account) }}
-    </tbody>
+    <caption>Last 5 Saldo Changes, <a href="{{ url_for('main.account_transactions', account_id=account.id) }}">More...</a></caption>
+    {{ tables.changes_table(account, last_5, saldos) }}
 </table>
+</div>
 
 <div id="balance"></div>
 <script src="{{ url_for('anal.static', filename='js/scatter.js') }}"></script>
@@ -30,4 +26,6 @@
 d3.json("{{ url_for('anal_api.account', acc_id=account.id) }}")
         .then((data) => scatter(data, '#balance'));
 </script>
+
+{% include "trans_modal.j2" %}
 {% endblock %}
