--- a/finnance/main/templates/agent.j2
+++ b/finnance/main/templates/agent.j2
@@ -100,6 +100,6 @@ No Transactions
 No Flows
 {% endif %}
 
-{{ trans_modal.modal(accounts, agents, categories, currencies)}}
+{% include "trans_modal.j2" %}
 
 {% endblock body %}
