--- a/finnance/tables/templates/tables.j2
+++ b/finnance/tables/templates/tables.j2
@@ -73,6 +73,13 @@
     </thead>
 {% endmacro %}
 
+{% macro category(category) %}
+<td class="min" data-sort="{{ category.order }}"
+    style="color: {{ category.color }}">
+    {{ category.desc }}
+</td>
+{% endmacro %}
+
 {% macro trans_row(tr, saldo) %}
 <tr>
     {{ trans_edit(tr.id) }}
@@ -106,6 +113,23 @@
     {% else %}
         {{ transfer_row(change, account, saldos[loop.index0]) }}
     {% endif %}
+{% endfor %}
+</tbody>
+{% endmacro %}
+
+{% macro records_table(records) %}
+{{ head(['', 'Date', 'Time', 'Category', 'Agent', 'Amount', 'Comment']) }}
+<tbody>
+{% for rec in records %}
+<tr>
+    {{ trans_edit(rec.trans_id) }}
+    {{ date(rec.trans.date_issued) }}
+    {{ time(rec.trans.date_issued) }}
+    {{ category(rec.category) }}
+    {{ agent(rec.trans.agent) }}
+    {{ amount(rec.amount, rec.trans.is_expense, rec.trans.currency) }}
+    {{ comment(rec.trans.comment) }}
+</tr>
 {% endfor %}
 </tbody>
 {% endmacro %}
