feat: Add Records to Nav Bar
ref: 1#

--- a/finnance/templates/layout.j2
+++ b/finnance/templates/layout.j2
@@ -33,6 +33,9 @@
                 <a class="nav-item nav-link" href="{{ url_for('anal.analysis') }}">
                     Analysis
                 </a>
+                <a class="nav-item nav-link" href="{{ url_for('tables.records') }}">
+                    Records
+                </a>
                 <div class="nav-item dropdown">
                     <div class="nav-link dropdown-toggle" 
                         id="navbyarDropdown" role="button"
