--- a/finnance/analysis/templates/dashboard.j2
+++ b/finnance/analysis/templates/dashboard.j2
@@ -29,7 +29,7 @@ edit categories
 <script>
 function load() {
     const curr_id = $('select[name=currency]').val();
-    let conts = ['#sunburst', '#divstackbars', '#incexp'];
+    let conts = ['#sunburst', '#divstackbars', '#incexp', '#net'];
     for (let i in conts)
         $(conts[i]).html("");
     
@@ -39,7 +39,7 @@ function load() {
         .then((data) => divstackbars(data, '#divstackbars'));
     d3.json("{{ url_for('anal_api.inc_vs_exp', curr_id=0) }}".replace(0, curr_id))
         .then((data) => scatter(data, '#incexp'));
-    d3.json("{{ url_for('anal_api.net') }}")
+    d3.json("{{ url_for('anal_api.net', currency_id=0) }}".replace(0, curr_id))
         .then((data) => stairline(data, '#net'));
 }
 load();
