fix: correct filter.js url

--- a/finnance/tables/templates/filter.j2
+++ b/finnance/tables/templates/filter.j2
@@ -68,5 +68,5 @@
         {{ submit() }}
     </div>
 </form>
-<script src="{{ url_for('static', filename='filter.js') }}"></script>
+<script src="{{ url_for('tables.static', filename='filter.js') }}"></script>
 {% endmacro %}
