feat: default datatable length 25

--- a/finnance/tables/templates/datatable.j2
+++ b/finnance/tables/templates/datatable.j2
@@ -11,7 +11,8 @@
 $(document).ready(function () {
     $('#table').DataTable({
         order: [[1, 'desc']], 
-        columnDefs: [{ orderable: false, targets: 0 }]
+        columnDefs: [{ orderable: false, targets: 0 }],
+        pageLength: 25
     });
 });
 </script>
