--- a/finnance/templates/layout.j2
+++ b/finnance/templates/layout.j2
@@ -36,6 +36,9 @@
                 <a class="nav-item nav-link" href="{{ url_for('tables.records') }}">
                     Records
                 </a>
+                <a class="nav-item nav-link" href="{{ url_for('tables.flows') }}">
+                    Flows
+                </a>
                 <div class="nav-item dropdown">
                     <div class="nav-link dropdown-toggle" 
                         id="navbyarDropdown" role="button"
