--- a/finnance/templates/layout.j2
+++ b/finnance/templates/layout.j2
@@ -33,10 +33,10 @@
                 <a class="nav-item nav-link" href="{{ url_for('anal.analysis') }}">
                     Analysis
                 </a>
-                <a class="nav-item nav-link" href="{{ url_for('tables.records') }}">
+                <a class="nav-item nav-link" href="{{ url_for('queries.records') }}">
                     Records
                 </a>
-                <a class="nav-item nav-link" href="{{ url_for('tables.flows') }}">
+                <a class="nav-item nav-link" href="{{ url_for('queries.flows') }}">
                     Flows
                 </a>
                 <div class="nav-item dropdown">
