--- a/finnance/templates/layout.j2
+++ b/finnance/templates/layout.j2
@@ -21,13 +21,13 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="{{ url_for('main.index') }}">Finnance</a>
+        <a class="navbar-brand" href="{{ url_for('main.home') }}">Finnance</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="{{ url_for('main.index') }}">
+                <a class="nav-item nav-link" href="{{ url_for('main.home') }}">
                     Home
                 </a>
                 <a class="nav-item nav-link" href="{{ url_for('anal.analysis') }}">
@@ -48,8 +48,8 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     {% for account in accounts %}
                         <a class="dropdown-item" 
-                            href="{{ url_for('main.account', account_id=account.id) }}">
-                            {{ account.desc }}
+                            href="{{ url_for('main.account', account_id=account.id) }}">
+                            {{ account.desc }}
                         </a>
                     {% endfor %}
                     </div>
