--- a/finnance/templates/layout.j2
+++ b/finnance/templates/layout.j2
@@ -21,6 +21,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        {% if current_user.get_id() %}
         <a class="navbar-brand" href="{{ url_for('main.home') }}">Finnance</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -55,7 +56,25 @@
                     </div>
                 </div>
             </div>
+            <div class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+                <span class="nav-item dropdown">
+                    <div class="nav-link dropdown-toggle" 
+                            id="navbyarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{ current_user.username }}
+                    </div>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" 
+                            href="{{ url_for('main.logout') }}">
+                            Log out
+                        </a>
+                    </div>
+                </span>
+            </div>
         </div>
+        {% else %}
+        <a class="navbar-brand" href="{{ url_for('main.login') }}">Finnance</a>
+        {% endif %}
     </nav>
     <div class="container">
         {% block body %}
