--- a/finnance/creation/templates/trans_modal.j2
+++ b/finnance/creation/templates/trans_modal.j2
@@ -95,9 +95,7 @@
                     {{ fr.flowsRecords(categories) }}
                     {{ commentForm() }}
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary"
+                <button type="button" class="btn btn-secondary float-right"
                     data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-primary"
                     id="transactionSubmit">Submit</button>
