--- a/finnance/creation/templates/transfer_modal.j2
+++ b/finnance/creation/templates/transfer_modal.j2
@@ -73,9 +73,7 @@
                         <input class="form-control" type="text" maxlength=120 name="comment">
                     </div>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-secondary float-right" data-dismiss="modal">Cancel</button>
                 <button type="submit" form="transferForm" class="btn btn-primary">Add new Transfer</button>
             </div>
         </div>
