--- a/frontend/src/styles/DataPill.module.css
+++ b/frontend/src/styles/DataPill.module.css
@@ -7,12 +7,10 @@
     margin-right: 0;
     border-radius: var(--mantine-radius-default);
 }
-.pill > * > * {
+
+.cell, .edit {
     height: '100%';
-    padding-left: var(--mantine-spacing-xs);
-    padding-right: var(--mantine-spacing-xs);
-    padding-top: var(--mantine-spacing-xxs);
-    padding-bottom: var(--mantine-spacing-xxs);
+    padding: var(--mantine-spacing-xxs) var(--mantine-spacing-xs);
     border-radius: var(--mantine-radius-default);
     background-color: light-dark(
         var(--mantine-color-white),
